# DavidHomeVentory

./: .gitignore  Makefile  README.md  compose.prod.yml  compose.yml  run.sh
NameGenerator/: .gitignore  generate-qrcodes.sh  index.js  package-lock.json  package.json
back/: .env.example  .eslintrc.js  .prettierrc.js  Cargo.toml  package-lock.json  package.json  tsconfig.json
back/src/: config.ts  index.ts  main.rs  responses.ts
back/src/db/: schema.prisma  seed.ts
back/src/db/migrations/20231230232954_init/: migration.sql
back/src/modules/: common.rs  mod.rs
back/src/modules/auth/: authenticator.rs  controllers.rs  index.ts  mod.rs  token.ts
back/src/modules/warehouse/: WarehouseService.ts  controllers.rs  index.ts  mod.rs  models.ts  repo.rs  repo.ts
back/ts-auth-api/: client.ts  types.ts
back/ts-warehouse-api/: client.ts  types.ts
front/: .eslintrc.js  .gitignore  Makefile  capacitor.config.ts  index.html  manifest.json  nginx.conf  package-lock.json  package.json  panda.config.ts  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts
front/android/: capacitor.settings.gradle
front/android/app/: build.gradle  capacitor.build.gradle
front/app/: build.gradle
front/src/: Router.tsx  index.tsx  types.d.ts
front/src/@ui/: Alert.tsx  Breadcrumbs.tsx  Button.tsx  Divider.tsx  Input.tsx  Spinner.tsx  theme.ts
front/src/pages/: Login.tsx
front/src/services/: useApi.tsx  useAuth.tsx
front/src/utils/: createStore.md  createStore.ts  useAsyncCallback.ts  useAsyncEffect.ts  useInvalidate.tsx
new-back/src/: index.ts
(+27 files in other folders)
