[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
yerpc = "0.3.1"
tokio = { version = "1.23.0", features = ["full"]}
typescript-type-def = "0.5.5"
axum = "0.6.1"
sled = "0.34.7"
jsonwebtoken = "8.2.0"
rand = "0.8.5"
derive_more = "0.99.17"
rmp-serde = "1.1.1"
bcrypt = "0.13.0"
tower-http = { version = "0.3.5", features = ["cors"]}